--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 
 body {
   font-family: "helveticaneuemedium";
-background-color: white;
+background-color: #FEE829;
 padding-top: 20px;
 	padding-left: 20px;
 	padding-right: 20px;
@@ -68,8 +68,8 @@ a {
 			z-index: 1;
 			height: 150px;
 		    height: 170px;
-		    border-top: 1px solid #73106C;
-		    border-bottom: 1px solid #73106C;
+		    border-top: 1px solid black;
+		    border-bottom: 1px solid black;
 		}
 
 ul,
@@ -208,15 +208,18 @@ img {
         padding: 5px 15px;
         color: white;
         font-size: 13px; }
-        .header-area .top-header .top-social-area a:hover, .header-area .top-header .top-social-area a:focus {
+        .header-area .top-header .top-social-area a:hover, 
+        .header-area .top-header .top-social-area a:focus {
           color: white; }
-        @media only screen and (min-width: 768px) and (max-width: 991px) {
+        @media only screen and (min-width: 768px) and
+         (max-width: 991px) {
           .header-area .top-header .top-social-area a {
             padding: 5px 7px; } }
         @media only screen and (max-width: 767px) {
           .header-area .top-header .top-social-area a {
             padding: 5px 7px; } }
-        @media only screen and (min-width: 576px) and (max-width: 767px) {
+        @media only screen and (min-width: 576px) and
+         (max-width: 767px) {
           .header-area .top-header .top-social-area a {
             padding: 5px 4px; } }
 
@@ -226,7 +229,7 @@ img {
 		opacity: 0.95;
     height: 200px;
     border-top: 1px solid #417536;
-    border-bottom: 1px solid #73106C; }
+    border-bottom: 1px solid #417536; }
     @media only screen and (max-width: 767px) {
       .header-area .logo-area {
         height: 200px;
@@ -250,7 +253,7 @@ img {
       padding: 0; }
 
       .header-area .original-nav-area a:hover, .header-area .original-nav-area a:focus {
-        background-color: #73106C;
+        background-color: #417536;
 
 			  }
     .header-area .original-nav-area .classynav ul li a {
@@ -265,7 +268,7 @@ img {
         border-radius: 20px;
 			  background-color: #DAA520;
       }
-    .header-area .original-nav-area .classy-nav-container {
+    .header-area .original-nav-area .classy-nav-container  {
       background-color: #417536;
  }
     .header-area .original-nav-area .classy-navbar {
@@ -311,7 +314,7 @@ img {
 
 /* AREA DE CONTENIDO*/
 .hero-area {
-	background-color: #DFDDDD;
+	background-color: #EA4629;
 	opacity: 0.95;
 	padding-top: 20px;
 	padding-bottom: 20px;
@@ -340,7 +343,7 @@ img {
         .hero-slides .single-hero-slide .slide-content .post-tag a {
           display: inline-block;
           padding: 3px 10px;
-          background-color: #000000;
+          background-color: black;
           border-radius: 2px;
           text-transform: uppercase;
           letter-spacing: 2px;
@@ -350,7 +353,7 @@ img {
         font-size: 40px;
         display: inline-block;
         padding: 12px 20px 5px;
-        background-color: #000000;
+        background-color: black;
         border-radius: 0;
         text-transform: uppercase;
         color: #ffffff;
@@ -369,7 +372,7 @@ img {
     display: block; }
   .hero-slides .owl-nav .owl-prev,
   .hero-slides .owl-nav .owl-next {
-    background-color: #cbcbcb;
+    background-color: black;
     top: 50%;
     margin-top: -20px;
     width: 40px;
@@ -387,7 +390,7 @@ img {
     .hero-slides .owl-nav .owl-prev:hover, .hero-slides .owl-nav .owl-prev:focus,
     .hero-slides .owl-nav .owl-next:hover,
     .hero-slides .owl-nav .owl-next:focus {
-      background-color: #73106C;
+      background-color: #417536;
       color: #ffffff; }
   .hero-slides .owl-nav .owl-next {
     left: auto;
@@ -396,7 +399,7 @@ img {
 /* AREAS DE CONTENIDO*/
 .single-blog-titulo{
   height: 200px;
-  background: black;
+  background: #EA4629;
 opacity: 0.9;
 border-radius: 20px;
   position: relative;
@@ -407,7 +410,7 @@ border-radius: 20px;
   z-index: 1;
 }
 .single-blog-area {
-	background: black;
+	background: #EA4629;
 opacity: 0.9;
 border-radius: 20px;
   position: relative;
@@ -430,7 +433,7 @@ border-radius: 20px;
       z-index: 10;
       left: 15px;
       top: 15px;
-      border: 1px solid #787878;
+      border: 1px solid #417536;
       background-color: #ffffff;
       text-align: center;
 		}
@@ -653,7 +656,7 @@ border-radius: 20px;
 
 /***************************AREA DE INSTAGRAM***************************/
 .instagram-feed-area {
-	background-color: black;
+	background-color: #EA4629;
   position: relative;
   z-index: 1;
   border-top: 1px solid black; }
@@ -678,7 +681,7 @@ border-radius: 20px;
       top: 0;
       left: 0;
       z-index: 10;
-      background-color: #DAA520;
+      background-color: #417536;
       opacity: 0;
       visibility: hidden; }
     .instagram-feed-area .single-insta-feed:hover .hover-effects a, .instagram-feed-area .single-insta-feed:focus .hover-effects a {
@@ -688,7 +691,7 @@ border-radius: 20px;
 
 /* AREA DE CONTACTO CSS */
 .contact-area {
-	background-color: #DFDDDD;
+	background-color: #EA4629;
 	opacity: 0.95;
 	border-radius: 25px;
 }
@@ -700,12 +703,12 @@ border-radius: 20px;
 	padding-top: 12px;
 	padding-left: 15px;
   margin-bottom: 30px;
-background-color: #A0136D;
+background-color: #417536;
 border-radius: 20px;
 }
 .contact-form button,
 .post-a-comment-area button {
-  background-color: #A0136D;
+  background-color: #417536;
 }
 
 /* FORMA DEL FORMULARIO */
@@ -749,7 +752,7 @@ border-radius: 20px;
       width: 0;
       bottom: 0;
       position: absolute;
-      background-color: #DAA520;
+      background-color: #417536;
       transition: 0.5s ease all; }
     .group .bar:before {
       left: 50%; }
@@ -919,7 +922,7 @@ textarea:focus ~ .highlight {
 /* AREA DE PIE DE PAGINA*/
 .footer-area {
 	width: 100%;
-	background-color: black;
+	background-color: #EA4629;
   position: relative;
   z-index: 1;
  }
@@ -944,13 +947,13 @@ textarea:focus ~ .highlight {
   .coming-soon-area .header-area .logo-area {
     height: auto;
     padding: 130px 0 100px;
-    border-top: 1px solid #999da4;
+    border-top: 1px solid #417536;
     border-bottom: none; }
     @media only screen and (max-width: 767px) {
       .coming-soon-area .header-area .logo-area {
         padding: 80px 0 50px 0; } }
   .coming-soon-area .coming-soon-timer {
-    border-bottom: 1px solid #999da4;
+    border-bottom: 1px solid #417536;
     position: relative;
     z-index: 1; }
     .coming-soon-area .coming-soon-timer .coming-soon-content {
@@ -1010,7 +1013,7 @@ right: 30px;
 z-index: 99;
 border: none;
 outline: none;
-background-color:  #DAA520;
+background-color:  #417536;
 color: white;
 cursor: pointer;
 padding: 10px 10px;
